# vectorstore

./: .codespellrc  .gitignore  CONTRIBUTE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml  publish.yaml
tests/integration_tests/: conftest.py  test_index.py  test_index_stats.py  test_metadata_filters.py  test_query_search.py  test_vector_management.py  test_vector_operations.py  test_vectordb.py
tests/unit_tests/: test_extract_vector_data.py  test_filter.py  test_format_vector_values.py  test_where_clauses.py
vectorstore/: __init__.py  _constants.py  _distance_strategy.py  _index.py  distance_strategy.py  filter.py  index_interface.py  index_list.py  index_model.py  match.py  metric.py  stats.py  vector.py  vectordb.py
